Improve build.sh